--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -266,6 +266,10 @@ spec:
           value: "{{ .Values.backend.administration.logging.businessLogic }}"
         - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.SdFactory.Library"
           value: "{{ .Values.backend.administration.logging.sdfactoryLibrary }}"
+        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Custodian.Library"
+          value: "{{ .Values.backend.administration.logging.custodianLibrary }}"
+        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Bpdm.Library"
+          value: "{{ .Values.backend.administration.logging.bpdmLibrary }}"
         - name: "MAILINGSERVICE__MAIL__SMTPHOST"
           value: "{{ .Values.backend.mailing.host }}"
         - name: "MAILINGSERVICE__MAIL__SMTPPASSWORD"
