--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -125,8 +125,10 @@ spec:
           value: "{{ .Values.sharedidpAddress }}"
         - name: "SERILOG__MINIMUMLEVEL__Default"
           value: "{{ .Values.backend.registration.logging.default }}"
-        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Registration.Service.Bpn"
-          value: "{{ .Values.backend.registration.logging.registrationServiceBpn }}"
+        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Bpdm.Library"
+          value: "{{ .Values.backend.registration.logging.bpdmLibrary }}"
+        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Registration.Service.BusinessLogic"
+          value: "{{ .Values.backend.registration.logging.registrationService }}"
         - name: "MAILINGSERVICE__MAIL__SMTPHOST"
           value: "{{ .Values.backend.mailing.host }}"
         - name: "MAILINGSERVICE__MAIL__SMTPPASSWORD"
