--- a/consortia/environments/values-stable.yaml
+++ b/consortia/environments/values-stable.yaml
@@ -123,7 +123,8 @@ backend:
   registration:
     logging:
       default: "Debug"
-      registrationServiceBpn: "Debug"
+      bpdmLibrary: "Debug"
+      registrationService: "Debug"
     healthChecks:
       startup:
         tags:
@@ -138,6 +139,8 @@ backend:
       default: "Debug"
       businessLogic: "Debug"
       sdfactoryLibrary: "Debug"
+      bpdmLibrary: "Debug"
+      custodianLibrary: "Debug"
     healthChecks:
       startup:
         tags:
