updates(bpdm api path): add /pool/ to the bpdm api path

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -135,7 +135,7 @@ frontend:
       #   memory: 128Mi
     path: "/assets"
   centralidpAuthPath: "/auth"
-  bpdmPartnersPoolApiPath: "/api"
+  bpdmPartnersPoolApiPath: "/pool/api"
 
 backend:
   ingress:
