chore(app & Service) :Added Subscription ManagerRoles
Ref : CPLP-3111

--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -186,6 +186,12 @@ spec:
           value: "{{ .Values.backend.clients.portal }}"
         - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.serviceManagerRoles.role0 }}"
+        - name: "SERVICES__SUBSCRIPTIONMANAGERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.appmarketplace.subscriptionManagerRoles.role0 }}"
+        - name: "APPMARKETPLACE__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.appmarketplace.subscriptionManagerRoles.role1 }}"
         - name: "APPMARKETPLACE__SUBMITAPPNOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.submitAppNotificationTypeIds.type0 }}"
         - name: "APPMARKETPLACE__TECHNICALUSERPROFILECLIENT"
