--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -178,6 +178,12 @@ spec:
           value: "{{ .Values.backend.clients.portal }}"
         - name: "SERVICES__SERVICEMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.serviceManagerRoles.role0 }}"
+        - name: "SERVICES__SUBSCRIPTIONMANAGERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "SERVICES__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.services.subscriptionManagerRoles.role0 }}"
+        - name: "SERVICES__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.services.subscriptionManagerRoles.role1 }}"
         - name: "SERVICES__SERVICEMARKETPLACEADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.services.serviceMarketplacePath }}"
         - name: "SERVICES__SUBMITSERVICENOTIFICATIONTYPEIDS__0"
