--- a/consortia/environments/values-upgrade.yaml
+++ b/consortia/environments/values-upgrade.yaml
@@ -128,8 +128,8 @@ backend:
     healthChecks:
       startup:
         tags:
-        - name: "HEALTHCHECKS__0__TAGS__0"
-          value: "keycloak"
+        # - name: "HEALTHCHECKS__0__TAGS__0"
+        #   value: "keycloak"
         - name: "HEALTHCHECKS__0__TAGS__1"
           value: "portaldb"
     swaggerEnabled: true
@@ -144,8 +144,8 @@ backend:
     healthChecks:
       startup:
         tags:
-        - name: "HEALTHCHECKS__0__TAGS__0"
-          value: "keycloak"
+        # - name: "HEALTHCHECKS__0__TAGS__0"
+        #   value: "keycloak"
         - name: "HEALTHCHECKS__0__TAGS__1"
           value: "portaldb"
         - name: "HEALTHCHECKS__0__TAGS__2"
@@ -169,8 +169,8 @@ backend:
     healthChecks:
       startup:
         tags:
-        - name: "HEALTHCHECKS__0__TAGS__0"
-          value: "keycloak"
+        # - name: "HEALTHCHECKS__0__TAGS__0"
+        #   value: "keycloak"
         - name: "HEALTHCHECKS__0__TAGS__1"
           value: "portaldb"
     swaggerEnabled: true
@@ -185,8 +185,8 @@ backend:
     healthChecks:
       startup:
         tags:
-        - name: "HEALTHCHECKS__0__TAGS__0"
-          value: "keycloak"
+        # - name: "HEALTHCHECKS__0__TAGS__0"
+        #   value: "keycloak"
         - name: "HEALTHCHECKS__0__TAGS__1"
           value: "portaldb"
     logging:
@@ -200,8 +200,8 @@ backend:
     healthChecks:
       startup:
         tags:
-        - name: "HEALTHCHECKS__0__TAGS__0"
-          value: "keycloak"
+        # - name: "HEALTHCHECKS__0__TAGS__0"
+        #   value: "keycloak"
         - name: "HEALTHCHECKS__0__TAGS__1"
           value: "portaldb"
     swaggerEnabled: true
