--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -281,6 +281,10 @@ spec:
           value: "{{ .Values.backend.mailing.port }}"
         - name: "MAILINGSERVICE__MAIL__SMTPUSER"
           value: "{{ .Values.backend.mailing.user }}"
+        - name: "NETWORK2NETWORK__INITIALROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "NETWORK2NETWORK__INITIALROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.initialRoles.role0 }}"
         - name: "PROVISIONING__CENTRALIDENTITYPROVIDER__CONFIG__CLIENTID"
           value: "{{ .Values.backend.provisioning.centralIdentityProvider.clientId }}"
         - name: "PROVISIONING__CENTRALREALM"
