--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -224,7 +224,7 @@ spec:
             - name: "NETWORKREGISTRATION__INITIALROLES__0__CLIENTID"
               value: "{{ .Values.backend.clients.portal }}"
             - name: "NETWORKREGISTRATION__INITIALROLES__0__USERROLENAMES__0"
-              value: "{{ .Values.backend.administration.initialRoles.role0 }}"
+              value: "{{ .Values.backend.processesworker.networkRegistration.initialRoles.role0 }}"
             - name: "MAILINGSERVICE__MAIL__SMTPPORT"
               value: "{{ .Values.backend.mailing.port }}"
             - name: "MAILINGSERVICE__MAIL__SMTPUSER"
