chore: add osp configuration
Refs: CPLP-2638

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -371,6 +371,13 @@ backend:
     network2network:
       initialRoles:
         role0: "Company Admin"
+    onboardingServiceProvider:
+      scope: "openid"
+      grantType: "client_credentials"
+      # -- Provide onboardingserviceprovider client-id from CX IAM centralidp.
+      clientId: "onboardingserviceprovider-client-id"
+      # -- Client-secret for onboardingserviceprovider client-id. Secret-key 'onboardingserviceprovider-client-secret'.
+      clientSecret: ""
   provisioning:
     centralRealm: "CX-Central"
     centralRealmId: "CX-Central"
