--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -291,6 +291,23 @@ spec:
           value: "{{ .Values.backend.administration.network2network.initialRoles.role0 }}"
         - name: "NETWORK2NETWORK__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
+        - name: "ONBOARDINGSERVICEPROVIDER__CLIENTID"
+          value: "{{ .Values.backend.administration.onboardingServiceProvider.clientId }}"
+        - name: "ONBOARDINGSERVICEPROVIDER__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.interfaces.secret }}"
+              key: "onboardingserviceprovider-client-secret"
+        - name: "ONBOARDINGSERVICEPROVIDER__GRANTTYPE"
+          value: "{{ .Values.backend.administration.onboardingServiceProvider.grantType }}"
+        - name: "ONBOARDINGSERVICEPROVIDER__KEYCLOAKTOKENADDRESS"
+          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+        - name: "ONBOARDINGSERVICEPROVIDER__PASSWORD"
+          value: "{{ .Values.backend.placeholder }}"
+        - name: "ONBOARDINGSERVICEPROVIDER__SCOPE"
+          value: "{{ .Values.backend.administration.onboardingServiceProvider.scope }}"
+        - name: "ONBOARDINGSERVICEPROVIDER__USERNAME"
+          value: "{{ .Values.backend.placeholder }}"
         - name: "PROVISIONING__CENTRALIDENTITYPROVIDER__CONFIG__CLIENTID"
           value: "{{ .Values.backend.provisioning.centralIdentityProvider.clientId }}"
         - name: "PROVISIONING__CENTRALREALM"
