--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -35,6 +35,7 @@ data:
   custodian-client-secret: {{ coalesce ( .Values.backend.processesworker.custodian.clientSecret | b64enc | quote ) ( index $secret.data "custodian-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
   sdfactory-client-secret: {{ coalesce ( .Values.backend.processesworker.sdfactory.clientSecret | b64enc | quote ) ( index $secret.data "sdfactory-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
   offerprovider-client-secret: {{ coalesce ( .Values.backend.processesworker.offerprovider.clientSecret | b64enc | quote ) ( index $secret.data "offerprovider-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
+  onboardingserviceprovider-client-secret: {{ coalesce ( .Values.backend.administration.onboardingserviceprovider.clientSecret | b64enc | quote ) ( index $secret.data "onboardingserviceprovider-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
@@ -43,4 +44,5 @@ stringData:
   custodian-client-secret: {{ ( .Values.backend.processesworker.custodian.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
   sdfactory-client-secret: {{ ( .Values.backend.processesworker.sdfactory.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
   offerprovider-client-secret: {{ ( .Values.backend.processesworker.offerprovider.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
+  onboardingserviceprovider-client-secret: {{ .Values.backend.administration.onboardingserviceprovider.clientSecret | quote | default ( randAlphaNum 32 | quote ) }}
 {{ end }}
