--- a/consortia/environments/values-int.yaml
+++ b/consortia/environments/values-int.yaml
@@ -149,6 +149,9 @@ backend:
           value: "portaldb"
         - name: "HEALTHCHECKS__0__TAGS__2"
           value: "provisioningdb"
+    onboardingServiceProvider:
+      clientId: "<path:portal/data/administration#onboardingserviceprovider-client-id>"
+      clientSecret: "<path:portal/data/int/administration#onboardingserviceprovider-client-secret>"
     swaggerEnabled: true
 
   provisioning:
