feat(app&service) : added activationUserRole
Ref: CPLP-3202

--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -168,6 +168,12 @@ spec:
           value: "{{ .Values.backend.clients.portal }}"
         - name: "APPMARKETPLACE__ITADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.ITAdminRoles.role0 }}"
+        - name: "APPMARKETPLACE__ACTIVATIONUSERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "APPMARKETPLACE__ACTIVATIONUSERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.appmarketplace.activationUserRoles.role0 }}"
+        - name: "APPMARKETPLACE__ACTIVATIONUSERROLES__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.appmarketplace.activationUserRoles.role1 }}"
         - name: "APPMARKETPLACE__NOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.notificationTypeIds.type0 }}"
         - name: "APPMARKETPLACE__OFFERSTATUSIDS__0"
