--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -166,6 +166,12 @@ spec:
           value: "{{ .Values.backend.clients.portal }}"
         - name: "SERVICES__ITADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.ITAdminRoles.role0 }}"
+        - name: "SERVICES__ACTIVATIONUSERROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "SERVICES__ACTIVATIONUSERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.services.activationUserRoles.role0 }}"
+        - name: "SERVICES__ACTIVATIONUSERROLES__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.services.activationUserRoles.role1 }}"
         - name: "SERVICES__SALESMANAGERROLES__0__CLIENTID"
           value: "{{ .Values.backend.clients.portal }}"
         - name: "SERVICES__SALESMANAGERROLES__0__USERROLENAMES__0"
