--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -436,6 +436,9 @@ backend:
     approveAppUserRoles:
       role0: "Sales Manager"
       role1: "Service Manager"
+    activationUserRoles:
+      role0: "Sales Manager"
+      role1: "App Manager"
     ITAdminRoles:
       role0: "IT Admin"
     uploadAppDocumentTypeIds:
@@ -607,6 +610,9 @@ backend:
     serviceManagerRoles:
       role0: "Service Manager"
     approveServiceUserRoles:
+      role0: "Sales Manager"
+      role1: "Service Manager"
+    activationUserRoles:
       role0: "Sales Manager"
       role1: "Service Manager"
     ITAdminRoles:
