--- a/consortia/environments/values-dev.yaml
+++ b/consortia/environments/values-dev.yaml
@@ -150,8 +150,7 @@ backend:
         - name: "HEALTHCHECKS__0__TAGS__2"
           value: "provisioningdb"
     onboardingServiceProvider:
-      clientId: "<path:portal/data/administration#onboardingserviceprovider-client-id>"
-      clientSecret: "<path:portal/data/dev/administration#onboardingserviceprovider-client-secret>"
+      encryptionKey: "<path:portal/data/administration#onboardingserviceprovider-encryption-key>"
     swaggerEnabled: true
 
   provisioning:
@@ -233,6 +232,8 @@ backend:
     offerprovider:
       clientId: "<path:portal/data/processes-worker#offerprovider-client-id>"
       clientSecret: "<path:portal/data/dev/processes-worker#offerprovider-client-secret>"
+    onboardingServiceProvider:
+      encryptionKey: "<path:portal/data/processes-worker#process-onboardingserviceprovider-encryption-key>"
 
 postgresql:
   auth:
