--- a/charts/local/values.yaml
+++ b/charts/local/values.yaml
@@ -18,20 +18,21 @@
 ###############################################################
 
 portal:
-  enabled: false
+  enabled: true
   replicaCount: 1
   frontend:
     ingress:
       enabled: true
+      ingressClassName: "nginx"
       annotations:
-        kubernetes.io/ingress.class: "nginx"
+        cert-manager.io/cluster-issuer: "my-ca-issuer"
         nginx.ingress.kubernetes.io/rewrite-target: "/$1"
         nginx.ingress.kubernetes.io/use-regex: "true"
         nginx.ingress.kubernetes.io/enable-cors: "true"
         nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.example.org"
       tls:
         # -- Provide tls secret.
-        - secretName: ""
+        - secretName: "portal.example.org-tls"
           # -- Provide host for tls secret.
           hosts:
             - "portal.example.org"
@@ -56,16 +57,17 @@ portal:
   backend:
     ingress:
       enabled: true
+      ingressClassName: "nginx"
       name: "portal-backend"
       annotations:
-        kubernetes.io/ingress.class: "nginx"
+        cert-manager.io/cluster-issuer: "my-ca-issuer"
         nginx.ingress.kubernetes.io/use-regex: "true"
         nginx.ingress.kubernetes.io/enable-cors: "true"
         nginx.ingress.kubernetes.io/proxy-body-size: "8m"
         nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.example.org"
       tls:
         # -- Provide tls secret.
-        - secretName: ""
+        - secretName: "portal-backend.example.org-tls"
           # -- Provide host for tls secret.
           hosts:
             - "portal-backend.example.org"
@@ -125,12 +127,14 @@ centralidp:
           secretKeyRef:
             name: centralidp-tls
             key: tls-truststore-password
+      - name: KEYCLOAK_HTTPS_PORT
+        value: "8443"
       - name: KEYCLOAK_EXTRA_ARGS
         value: "-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/realms/CX-Central-realm.json -Dkeycloak.migration.strategy=IGNORE_EXISTING"
     extraVolumes:
       - name: certificates
         secret:
-          secretName: root-cx-secret
+          secretName: root-secret
           defaultMode: 420
       - name: shared-certs
         emptyDir: {}
@@ -154,8 +158,8 @@ centralidp:
         command: ["/bin/bash"]
         args:
           - -ec
-          - >-
-            keytool -import -file "/certs/ca.crt" \
+          - |-
+            keytool -import -file "/certs/tls.crt" \
                     -keystore "/opt/bitnami/keycloak/certs/keycloak.truststore.jks" \
                     -storepass "${KEYCLOAK_TLS_TRUSTSTORE_PASSWORD}" \
                     -noprompt
@@ -199,7 +203,7 @@ centralidp:
       ingressClassName: "nginx"
       hostname: "centralidp.example.org"
       annotations:
-        cert-manager.io/cluster-issuer: "clusterissuer-cx"
+        cert-manager.io/cluster-issuer: "my-ca-issuer"
         nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
         nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
         nginx.ingress.kubernetes.io/cors-allow-origin: "https://centralidp.example.org"
@@ -217,15 +221,6 @@ centralidp:
       tls:
         keystore: ""
         truststore: ""
-    postgresql:
-      auth:
-        existingSecret:
-          # -- Password for the root username 'postgres'. Secret-key 'postgres-password'.
-          postgrespassword: ""
-          # -- Password for the non-root username 'kcshared'. Secret-key 'password'.
-          password: ""
-          # -- Password for the non-root username 'repl_user'. Secret-key 'replication-password'.
-          replicationPassword: ""
 
 sharedidp:
   enabled: true
@@ -249,12 +244,14 @@ sharedidp:
           secretKeyRef:
             name: sharedidp-tls
             key: tls-truststore-password
+      - name: KEYCLOAK_HTTPS_PORT
+        value: "8443"
       - name: KEYCLOAK_EXTRA_ARGS
         value: "-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=dir -Dkeycloak.migration.dir=/realms -Dkeycloak.migration.strategy=IGNORE_EXISTING"
     extraVolumes:
       - name: certificates
         secret:
-          secretName: root-cx-secret
+          secretName: root-secret
           defaultMode: 420
       - name: shared-certs
         emptyDir: {}
@@ -264,6 +261,9 @@ sharedidp:
         emptyDir: {}
       - name: realms
         emptyDir: {}
+      - name: realm-secrets
+        secret:
+          secretName: secret-sharedidp-example-realm
     extraVolumeMounts:
       - name: certificates
         mountPath: /certs
@@ -275,6 +275,8 @@ sharedidp:
         mountPath: "/opt/bitnami/keycloak/themes/catenax-shared-portal"
       - name: realms
         mountPath: "/realms"
+      - name: realm-secrets
+        mountPath: "/secrets"
     initContainers:
       - name: init-certs
         image: docker.io/bitnami/keycloak:16.1.1-debian-10-r103
@@ -282,8 +284,8 @@ sharedidp:
         command: ["/bin/bash"]
         args:
           - -ec
-          - >-
-            keytool -import -file "/certs/ca.crt" \
+          - |-
+            keytool -import -file "/certs/tls.crt" \
                     -keystore "/opt/bitnami/keycloak/certs/keycloak.truststore.jks" \
                     -storepass "${KEYCLOAK_TLS_TRUSTSTORE_PASSWORD}" \
                     -noprompt
@@ -291,12 +293,12 @@ sharedidp:
           - name: KEYCLOAK_TLS_KEYSTORE_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: centralidp-tls
+                name: sharedidp-tls
                 key: tls-keystore-password
           - name: KEYCLOAK_TLS_TRUSTSTORE_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: centralidp-tls
+                name: sharedidp-tls
                 key: tls-truststore-password
         volumeMounts:
           - name: certificates
@@ -315,8 +317,10 @@ sharedidp:
             cp -R /import/themes/catenax-shared/* /themes-catenax-shared
             echo "Copying themes-catenax-shared-portal..."
             cp -R /import/themes/catenax-shared-portal/* /themes-catenax-shared-portal
-            echo "Copying realms..."
-            cp -R /import/catenax-shared/realms/* /realms
+            echo "Copying realm..."
+            cp -R /import/catenax-shared/realms/CX-Operator-realm.json /realms
+            echo "Copying realm-secret..."
+            cp /secrets/CX-Operator-users-0.json /realms
         volumeMounts:
         - name: themes-catenax-shared
           mountPath: "/themes-catenax-shared"
@@ -324,6 +328,8 @@ sharedidp:
           mountPath: "/themes-catenax-shared-portal"
         - name: realms
           mountPath: "/realms"
+        - name: realm-secrets
+          mountPath: "/secrets"
     postgresql:
       nameOverride: "sharedidp-postgresql"
     ingress:
@@ -331,7 +337,7 @@ sharedidp:
       ingressClassName: "nginx"
       hostname: "sharedidp.example.org"
       annotations:
-        cert-manager.io/cluster-issuer: "clusterissuer-cx"
+        cert-manager.io/cluster-issuer: "my-ca-issuer"
         nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
         nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
         nginx.ingress.kubernetes.io/cors-allow-origin: "https://sharedidp.example.org"
@@ -349,32 +355,25 @@ sharedidp:
       tls:
         keystore: ""
         truststore: ""
-    postgresql:
-      auth:
-        existingSecret:
-          # -- Password for the root username 'postgres'. Secret-key 'postgres-password'.
-          postgrespassword: ""
-          # -- Password for the non-root username 'kcshared'. Secret-key 'password'.
-          password: ""
-          # -- Password for the non-root username 'repl_user'. Secret-key 'replication-password'.
-          replicationPassword: ""
-
-cert-manager:
-  installCRDs: true
 
 pgadmin4:
   enabled: true
 #   secret:
 #     password: ""
   env:
-    email: portal-iam@example.org
+    email: local@example.org
 #   existingSecret: secret-pgadmin4
   ingress:
     enabled: true
+    ingressClassName: "nginx"
     annotations:
-      kubernetes.io/ingress.class: nginx
+      cert-manager.io/cluster-issuer: "my-ca-issuer"
     hosts:
       - host: pgadmin4.example.org
         paths:
         - path: /
           pathType: Prefix
+    tls:
+      - hosts:
+        - pgadmin4.example.org
+        secretName: pgadmin4.example.org-tls
