chore: fix secret findings
Refs: CPLP-2638

--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -36,7 +36,7 @@ data:
   sdfactory-client-secret: {{ coalesce ( .Values.backend.processesworker.sdfactory.clientSecret | b64enc | quote ) ( index $secret.data "sdfactory-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
   offerprovider-client-secret: {{ coalesce ( .Values.backend.processesworker.offerprovider.clientSecret | b64enc | quote ) ( index $secret.data "offerprovider-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
   onboardingserviceprovider-encryption-key: {{ coalesce ( .Values.backend.administration.onboardingServiceProvider.encryptionKey | b64enc | quote ) ( index $secret.data "onboardingserviceprovider-encryption-key" ) | default ( randAlphaNum 32 | quote ) }}
-  process-onboardingserviceprovider-encryption-key: {{ coalesce ( .Values.backend.processworker.onboardingServiceProvider.encryptionKey | b64enc | quote ) ( index $secret.data "onboardingserviceprovider-encryption-key" ) | default ( randAlphaNum 32 | quote ) }}
+  process-onboardingserviceprovider-encryption-key: {{ coalesce ( .Values.backend.processesworker.onboardingServiceProvider.encryptionKey | b64enc | quote ) ( index $secret.data "onboardingserviceprovider-encryption-key" ) | default ( randAlphaNum 32 | quote ) }}
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
@@ -46,5 +46,5 @@ stringData:
   sdfactory-client-secret: {{ ( .Values.backend.processesworker.sdfactory.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
   offerprovider-client-secret: {{ ( .Values.backend.processesworker.offerprovider.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
   onboardingserviceprovider-encryption-key: {{ .Values.backend.administration.onboardingServiceProvider.encryptionKey | quote | default ( randAlphaNum 32 | quote ) }}
-  process-onboardingserviceprovider-encryption-key: {{ .Values.backend.processworker.onboardingServiceProvider.encryptionKey | quote | default ( randAlphaNum 32 | quote ) }}
+  process-onboardingserviceprovider-encryption-key: {{ .Values.backend.processesworker.onboardingServiceProvider.encryptionKey | quote | default ( randAlphaNum 32 | quote ) }}
 {{ end }}
