chore(localdev): update chart releaser action

--- a/.github/workflows/chart-release.yaml
+++ b/.github/workflows/chart-release.yaml
@@ -56,6 +56,13 @@ jobs:
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm dependency update
 
+      - name: Update helm dependencies for localdev
+        run: |
+          cd charts/localdev
+          helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
+          helm repo add pgadmin4 https://helm.runix.net
+          helm dependency update
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
         env:
